src/test/deca/syntax/valid/resultats/test_all_token_for_helloword-lex.res
'{': [@0,301:301='{',<36>,14:0]
'print': [@1,303:307='print',<17>,15:0]
'(': [@2,308:308='(',<34>,15:5]
STRING: [@3,309:321='"print() \\ "',<47>,15:6]
',': [@4,322:322=',',<33>,15:19]
STRING: [@5,323:335='"123456879\""',<47>,15:20]
')': [@6,336:336=')',<35>,15:33]
';': [@7,337:337=';',<39>,15:34]
';': [@8,338:338=';',<39>,15:35]
'printx': [@9,340:345='printx',<20>,16:0]
'(': [@10,346:346='(',<34>,16:6]
STRING: [@11,347:348='""',<47>,16:7]
')': [@12,349:349=')',<35>,16:9]
';': [@13,350:350=';',<39>,16:10]
'printlnx': [@14,394:401='printlnx',<19>,21:0]
'(': [@15,402:402='(',<34>,21:8]
STRING: [@16,403:413='",(){}' ; "',<47>,21:9]
')': [@17,414:414=')',<35>,21:20]
';': [@18,415:415=';',<39>,21:21]
'println': [@19,456:462='println',<18>,23:0]
'(': [@20,463:463='(',<34>,23:7]
STRING: [@21,464:478='"test println "',<47>,23:8]
')': [@22,479:479=')',<35>,23:23]
';': [@23,480:480=';',<39>,23:24]
'}': [@24,481:481='}',<37>,23:25]
