src/test/deca/syntax/invalid/resultats/test30_if-lex.res
'{': [@0,306:306='{',<36>,14:0]
'if': [@1,309:310='if',<11>,15:1]
'(': [@2,311:311='(',<34>,15:3]
')': [@3,312:312=')',<35>,15:4]
'{': [@4,313:313='{',<36>,15:5]
'}': [@5,316:316='}',<37>,16:1]
'println': [@6,321:327='println',<18>,18:1]
'(': [@7,328:328='(',<34>,18:8]
STRING: [@8,329:335='"Hello"',<47>,18:9]
')': [@9,336:336=')',<35>,18:16]
';': [@10,337:337=';',<39>,18:17]
'}': [@11,339:339='}',<37>,19:0]
